--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -9,6 +9,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:latest
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: test_db
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -21,4 +35,8 @@ jobs:
           cache: 'maven'
 
       - name: Build with Maven
+        env:
+          POSTGRES_URL: jdbc:postgresql://localhost:5432/test_db
+          POSTGRES_USERNAME: postgres
+          POSTGRES_PASSWORD: postgres
         run: mvn -B package --file pom.xml
