--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -39,5 +39,7 @@ jobs:
           POSTGRES_URL: jdbc:postgresql://localhost:5432/test_db
           POSTGRES_USERNAME: postgres
           POSTGRES_PASSWORD: postgres
+          ENTERPRISE_URL: enterprise.com
           AUTH_URL: http://your-auth-server.com
         run: mvn -B package --file pom.xml
+
